kubernetes/apps/kguardian/kguardian/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kguardian
spec:
  hostnames:
    - kguardian.aresu.eu
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mcp
      backendRefs:
        - name: kguardian-llm-bridge
          port: 8080
    - backendRefs:
        - name: kguardian-frontend
          port: 5173
